build tiny, invertVersion, removeIntermediary, dropInvalid, generatePackageInfo, and dictionary file. Moved to plugin